<resources>
    <string name="app_name">MindSharpener</string>
    <string name="instructionLabel">Instruction:</string>
    <string name="instruction">This is a simple mathematics games which is believed can train your brain. Two numbers are given randomly based on your level choice together with the operator. You just need to calcuate, write you answer, and press the \'Check\' button. Every correct answer will give you 1 point, while wrong answer will deduct 1 point.</string>
    <string name="levelLabel">Choose Level:</string>
    <string name="i3">i3</string>
    <string name="i5">i5</string>
    <string name="i7">i7</string>
    <string name="num1">0</string>
    <string name="operator">+</string>
    <string name="num2">0</string>
    <string name="buttonLabel">Check</string>
    <string name="pointLabel">POINT:</string>
    <string name="point">0</string>
</resources>